# django-massless

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish.yml  publish.yml.disabled  tag.yml  tag.yml.disabled
benchmarks/: README.md  aggregate.sh  app.py  cases.md  compare.py  middleware_tax.py  pool_lifecycle_pg.py  run.sh  run_all.sh
benchmarks/bench/: asgi.py  rsgi.py  settings.py  urls.py  views.py
benchmarks/ceiling/: profile_pipeline.py  run.sh  server.py
benchmarks/django_baseline/: asgi.py  settings.py  settings_full.py  urls.py  views.py
benchmarks/results/: DROPIN-DJANGO-VARIANTS.md  DROPIN-FIDELITY.md  DROPIN-PHASE1.md  OVERVIEW.md  PHASE1.md  PHASE2.md  PHASE3.md  PHASE4.md  bolt.md  django.md  massless.md
docs/superpowers/plans/: 2026-05-31-django-massless-phase-1.md  2026-05-31-django-massless-phase-2.md  2026-05-31-django-massless-phase-3.md  2026-05-31-django-massless-phase-4.md  2026-06-01-django-massless-dropin-phase-1.md
docs/superpowers/specs/: 2026-05-31-django-massless-design.md  2026-05-31-django-massless-phase-1-design.md  2026-05-31-django-massless-phase-2-design.md  2026-05-31-django-massless-phase-3-design.md  2026-05-31-django-massless-phase-4-design.md  2026-06-01-django-massless-dropin-design.md  2026-06-06-django-massless-owned-middleware-chain-design.md
src/massless/: __init__.py  __main__.py  _chain.py  _middleware.pxd  _middleware.py  _middleware.pyx  _protocol.pyx  _proxy.py  _request.pxd  _request.pyx  _response.pxd  _response.pyx  _router.pxd  _router.pyx  app.py  bridge.py  handler.py  responses.py  server.py  supervisor.py
src/massless/management/commands/: runmassless.py
tests/: bridge_mw.py  conftest.py  supervisor_targets.py  test_app.py  test_auth.py  test_binding.py  test_bridge.py  test_chain.py  test_dispatch.py  test_dropin.py  test_fast_dispatch.py  test_fast_responses.py  test_fidelity.py  test_handler.py  test_integration.py  test_lifecycle.py  test_management.py  test_middleware.py  test_parity.py  test_promotion_orm.py  test_protocol.py  test_request.py  test_response.py  test_router.py  test_runner.py  test_smoke.py  test_supervisor.py
tests/settings/: base.py  urls.py
