[project]
name = "django-massless"
version = "0.1.0a1"
description = "High-performance Django API framework with a Cython request pipeline that defers Django object materialization until touched."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["django", "api", "framework", "cython", "performance", "asgi"]
authors = [{ name = "Oliver Haas", email = "ohaas@e1plus.de" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Django",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Cython",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = ["httptools>=0.6.4", "msgspec>=0.18", "uvloop>=0.21"]

# massless is backed by Django but does not pin which one. Install exactly one of
# these extras (both provide the `django` import package, so they are mutually
# exclusive):
#   pip install django-massless[django]          # stock Django
#   pip install django-massless[django-asyncio]  # the async-optimized Django fork
# massless's own middleware chain (massless._chain) substitutes native-async fast
# re-implementations for the common built-in middleware (security/common/clickjacking/
# gzip/conditional-get; see massless._middleware), so the per-middleware sync_to_async
# tax is removed on stock Django too (~5.6x on the middleware path in-process). The fork
# additionally rewrites the ORM and remaining built-in middleware as native-async; see
# benchmarks/results/DROPIN-DJANGO-VARIANTS.md.
[project.optional-dependencies]
django = ["Django>=5.2,<7"]
django-asyncio = [
  "django @ git+https://github.com/oliverhaas/django-asyncio.git",
]

[project.urls]
Homepage = "https://github.com/oliverhaas/django-massless"
Repository = "https://github.com/oliverhaas/django-massless.git"

[dependency-groups]
dev = [
  "cython==3.2.8",
  "django-stubs==6.0.6",
  "mypy==2.1.0",
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "pytest-cov==7.1.0",
  "pytest-django==4.12.0",
  "pytest-xdist==3.8.0",
  "ruff==0.15.20",
  "uvicorn==0.50.0",
]

[build-system]
requires = ["setuptools>=83.0.0", "cython>=3.2.8"]
build-backend = "setuptools.build_meta"

[tool.uv]
# The `django` and `django-asyncio` extras both provide the `django` package from
# different sources (PyPI vs the git fork). Declaring them as conflicting makes uv
# lock them as mutually-exclusive resolutions so `--extra django` resolves to stock
# Django, not the fork.
conflicts = [[{ extra = "django" }, { extra = "django-asyncio" }]]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["py.typed", "*.pxd"]

[tool.setuptools.exclude-package-data]
"*" = ["*.c", "*.cpp", "*.html"]

# Wheel matrix for the compiled extension. Free-threaded (cp3*t) builds are a
# deliberate v1 non-goal, so they are omitted here.
[tool.cibuildwheel]
build = ["cp312-*", "cp313-*", "cp314-*"]
build-frontend = "build[uv]"
build-verbosity = 1
test-command = "python -c \"import django; from django.conf import settings; settings.configure(INSTALLED_APPS=[]); django.setup(); import massless\""

[tool.cibuildwheel.linux]
archs = ["x86_64"]

[tool.cibuildwheel.macos]
archs = ["arm64"]

[tool.ruff]
target-version = "py313"
line-length = 120
fix = true

[tool.ruff.lint]
select = ["ALL"]
# FBT003: call-site boolean traps are unavoidable against fixed-signature APIs we call
# positionally (Django's adapt_method_mode(is_async, ...), massless's Cython to_bytes(keep_alive, ...)).
ignore = ["COM812", "D", "E501", "EM", "FBT003", "TRY003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
  "ANN",
  "ARG",
  "F841",
  "FBT",
  "PLC0415",
  "PLR2004",
  "PT006",
  "PT011",
  "PT013",
  "PT018",
  "S101",
  "S105",
  "S106",    # JWT test tokens use hardcoded secrets by design
  "S310",
  "SLF001",  # tests probe the promotion latch (_is_django) and _promote/_build_wsgi_environ
]
# Benchmark CLI scripts and apps: print is their output; view/settings code is
# fixture-grade (unused request args, hardcoded secret-key, in-fixture imports).
"benchmarks/**" = [
  "ANN",
  "ARG",
  "INP001",
  "PLC0415",
  "S101",
  "S105",
  "SLF001",
  "T201",
]

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main"]
pretty = true
show_error_codes = true
show_error_context = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.django-stubs]
django_settings_module = "tests.settings.base"

[[tool.mypy.overrides]]
module = [
  "massless._request",
  "massless._response",
  "massless._protocol",
  "massless._router",
]
ignore_missing_imports = true

# _middleware faithfully mirrors Django's own middleware and reuses its cache helpers. It
# duck-types the response (accessing HttpResponse/StreamingHttpResponse attributes through the
# HttpResponseBase the hooks receive -> attr-defined) and calls get_conditional_response, whose
# django-stubs signature is imprecise (arg-type/return-value). Behavior is covered by the
# differential suite (tests/test_chain.py), not the type checker.
[[tool.mypy.overrides]]
module = ["massless._middleware"]
disable_error_code = ["attr-defined", "arg-type", "return-value"]

[tool.pytest.ini_options]
addopts = "--cov=massless --cov-report=term-missing --cov-report=xml --no-cov-on-fail"
testpaths = ["tests"]
xfail_strict = true
DJANGO_SETTINGS_MODULE = "settings.base"
pythonpath = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]

[tool.coverage.report]
precision = 2
skip_covered = true
